--- a/outline.org
+++ b/outline.org
@@ -925,10 +925,11 @@
 
 ** Ethics
    Participation in the study was entirely voluntary, and participants
-   signed informed concent forms prior to participating in the
-   study. No identifying information was collected during the course
-   of the study. Additionally, as the study was performed persuant to a Master's
-   degree the study was not submited for external ethical review.
+   were informed of this fact, signing informed concent forms prior to
+   participating in the study. No identifying information was
+   collected during the course of the study. Additionally, as the
+   study was performed persuant to a Master's degree the study was not
+   submited for external ethical review.
 
 
 * Results
