--- a/outline.org
+++ b/outline.org
@@ -929,7 +929,7 @@
    participating in the study. No identifying information was
    collected during the course of the study. Additionally, as the
    study was performed persuant to a Master's degree the study was not
-   submited for external ethical review.
+   required to be nor was submited for external ethical review.
 
 
 * Results
