--- a/preamble.tex
+++ b/preamble.tex
@@ -7,13 +7,18 @@
 \usepackage[version=3]{mhchem}
 \usepackage[innermargin=1.5in,outermargin=1.25in,vmargin=1.25in,a4paper]{geometry}
 \usepackage[below]{placeins}
-\hypersetup{colorlinks=true,citecolor=blue,linkcolor=blue,citebordercolor={0 1 0},linktocpage,pdfstartview=FitH,anchorcolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue}
+\hypersetup{colorlinks=true,citecolor=black,linkcolor=black,citebordercolor={0 1 0},linktocpage,pdfstartview=FitH,anchorcolor=black,filecolor=black,menucolor=black,urlcolor=black}
+\usepackage{helvet}
 \linespread{1.3}
 \usepackage[citestyle=apa,bibstyle=apa,hyperref=true,maxcitenames=3,url=true,backend=biber,natbib=true,uniquename=mininit]{biblatex}
+\AtBeginBibliography{\small}
 \usepackage[american]{babel}
 \usepackage[parfill]{parskip}
 \usepackage{siunitx}
 \usepackage{nth}
+\usepackage{mathptmx}
+\usepackage{helvet}
+\usepackage{ThesisSU}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{refs.bib}
 
